--- a/exemplo_1/index.html
+++ b/exemplo_1/index.html
@@ -61,12 +61,7 @@
                     </div>
                     <a href="#">
 
-                    <div id="td-public-forms-target">
-                             <script src="https://neobpo-test.topdesk.net/solutions/forms/static/public-forms-api.js">
-                         </script> 
-                              <script>var params = { topdeskUrl: 'https://neobpo-test.topdesk.net', formId: 'a4f6d101-bd2a-4a06-b36d-868ff50dc3ed', gatewayToken: '02792d28-06bd-4daa-b94a-db43f67e409b', width: '550px', height: '500px' }; initTOPdeskForm(params);
-                            </script>
-                    </div>
+                   <div id="td-public-forms-target"><script src="https://neobpo-test.topdesk.net/solutions/forms/static/public-forms-api.js"></script> <script>var params = { topdeskUrl: 'https://neobpo-test.topdesk.net', formId: 'dd9d9404-8a10-437e-a7ea-3edb4751e3a4', gatewayToken: '02792d28-06bd-4daa-b94a-db43f67e409b', width: '550px', height: '500px' }; initTOPdeskForm(params);</script></div>
                     </a>
                 </section>
             </article>
