--- a/exemplo_1/index.html
+++ b/exemplo_1/index.html
@@ -1,77 +1,10 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Bem vindo</title>
-
-         <!--Google Fonts-->
-        <link 
-            href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" 
-            rel="stylesheet">
-
-        <!--Font Awesome-->
-        <link 
-            rel="stylesheet" 
-            href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-            integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" 
-            crossorigin="anonymous">
-
-        <!--Meu estilo-->
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        <main class="container">
-            <article>
-                <section class="foto-social">
-                    <div class="foto">
-                        <img src="../img/neo.png" alt="Formulário" title="colocar meu nome">
+<!-- do not change the markup -->
+<a href="#">
+<div id="td-public-forms-target">
+                        <script src="https://neoservice.neobpo.com.br/solutions/forms/static/public-forms-api.js">
+                        </script> 
+                        <script>var params = { topdeskUrl: 'https://neoservice.neobpo.com.br', formId: 'eb3ddbc2-609e-4b7a-9776-58e8e42bd9a8', gatewayToken: '02792d28-06bd-4daa-b94a-db43f67e409b', width: '550px', height: '500px' }; initTOPdeskForm(params);
+                        </script>
                     </div>
-                <a href="#">
-<!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Bem vindo</title>
-
-         <!--Google Fonts-->
-        <link 
-            href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" 
-            rel="stylesheet">
-
-        <!--Font Awesome-->
-        <link 
-            rel="stylesheet" 
-            href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-            integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" 
-            crossorigin="anonymous">
-
-        <!--Meu estilo-->
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        <main class="container">
-            <article>
-                <section class="foto-social">
-                    <div class="foto">
-                        <img src="../img/neo.png" alt="Formulário" title="colocar meu nome">
-                    </div>
-                    <a href="#">
-
-                   <div id="td-public-forms-target"><script src="https://neobpo-test.topdesk.net/solutions/forms/static/public-forms-api.js"></script> <script>var params = { topdeskUrl: 'https://neobpo-test.topdesk.net', formId: 'dd9d9404-8a10-437e-a7ea-3edb4751e3a4', gatewayToken: '02792d28-06bd-4daa-b94a-db43f67e409b', width: '550px', height: '500px' }; initTOPdeskForm(params);</script></div>
-                    </a>
-                </section>
-            </article>
-        </main>
-    </body>
-</html>
 </a>
 
-                </section>
-            </article>
-        </main>
-    </body>
-</html>
