--- a/exemplo_1/index.html
+++ b/exemplo_1/index.html
@@ -6,5 +6,8 @@
                         <script>var params = { topdeskUrl: 'https://neobpo.topdesk.net', formId: 'eb3ddbc2-609e-4b7a-9776-58e8e42bd9a8', gatewayToken: '02792d28-06bd-4daa-b94a-db43f67e409b', width: '550px', height: '500px' }; initTOPdeskForm(params);
                         </script>
                     </div>
+  <script src="https://neobpo-test.topdesk.net/solutions/native-chat-communication/native-chat-open-api.js?chatToken=a6a1402f7813f6980fa77382e9b5342f9d38ec574645feb7c3532338d0b73829">
+  </script>
+
 </a>
 
