--- a/teste/index.html
+++ b/teste/index.html
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!-- do not change the markup -->
+<a href="#">
 
-    <body>
-        <main class="container">
-            <article>
-                <section class="foto-social">
-                    <div class="foto">
-                        <img src="../img/neo.png" alt="Formulário" title="colocar meu nome">
-                    </div>
-                    <div id="td-public-forms-target">
-<script src="https://neobpo-test.topdesk.net/solutions/forms/static/public-forms-api.js">
-</script> 
-<script>var params = { topdeskUrl: 'https://neobpo-test.topdesk.net', formId: 'a4f6d101-bd2a-4a06-b36d-868ff50dc3ed', gatewayToken: '02792d28-06bd-4daa-b94a-db43f67e409b', width: '550px', height: '500px' }; initTOPdeskForm(params);
-</script>
-</div>
-                </section>
-            </article>
-        </main>
-    </body>
-</html>
+  
+<div id="td-public-forms-target">
+    <script src="https://neobpo-test.topdesk.net/solutions/forms/static/public-forms-api.js">
+    </script> <script>var params = { topdeskUrl: 'https://neobpo-test.topdesk.net', formId: 'a4f6d101-bd2a-4a06-b36d-868ff50dc3ed', gatewayToken: '02792d28-06bd-4daa-b94a-db43f67e409b', width: '550px', height: '500px' }; initTOPdeskForm(params);
+    </script></div>
+</a>
