--- a/teste/index.html
+++ b/teste/index.html
@@ -4,6 +4,7 @@
   
 <div id="td-public-forms-target">
     <script src="https://neobpo-test.topdesk.net/solutions/forms/static/public-forms-api.js">
-    </script> <script>var params = { topdeskUrl: 'https://neobpo-test.topdesk.net', formId: 'a4f6d101-bd2a-4a06-b36d-868ff50dc3ed', gatewayToken: '02792d28-06bd-4daa-b94a-db43f67e409b', width: '550px', height: '500px' }; initTOPdeskForm(params);
+    </script> 
+  <script>var params = { topdeskUrl: 'https://neobpo-test.topdesk.net', formId: 'a4f6d101-bd2a-4a06-b36d-868ff50dc3ed', gatewayToken: '02792d28-06bd-4daa-b94a-db43f67e409b', width: '550px', height: 'auto' }; initTOPdeskForm(params);
     </script></div>
 </a>
