--- a/exemplo_1/index.html
+++ b/exemplo_1/index.html
@@ -1,6 +1,9 @@
 <!-- do not change the markup -->
 <a href="#">
 
+                      <div class="foto">
+                        <img src="../img/neo.png" alt="Formulário" title="colocar meu nome">
+                    </div>
   
 <div id="td-public-forms-target">
                         <script src="https://neobpo.topdesk.net/solutions/forms/static/public-forms-api.js">
