--- a/teste/index.html
+++ b/teste/index.html
@@ -2,7 +2,7 @@
 <a href="#">
 
                      <div class="foto">
-                        <img src="../img/neo.gif" alt="Formulário" title="colocar meu nome">
+                        <img src="../teste/img/neo.gif" alt="Formulário" title="colocar meu nome">
                     </div>
   
 <div id="td-public-forms-target">
